--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,13 @@
 # Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs
-/Poc1.Receiver.Api/.vs/Poc1.Receiver.Api/FileContentIndex
-/Poc1.Receiver.Api/Poc1.Receiver.Api/obj
-/Poc1.Receiver.Api/Poc1.Receiver.Test/obj
+# Ignorar arquivos temporários
+*.tmp
+
+# Ignorar pasta "bin" e "obj"
+bin/
+obj/
+
+# Ignorar arquivos de configuração
+appsettings.json
+
